@@ -54,6 +54,26 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Set
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -123,6 +143,20 @@ operator|.
 name|util
 operator|.
 name|CharArraySet
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|BooleanQuery
 import|;
 end_import
 
@@ -1478,6 +1512,427 @@ name|inputDocuments
 argument_list|,
 literal|2
 argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testSuggesterCountForAllLookups
+specifier|public
+name|void
+name|testSuggesterCountForAllLookups
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Input
+name|keys
+index|[]
+init|=
+operator|new
+name|Input
+index|[]
+block|{
+operator|new
+name|Input
+argument_list|(
+literal|"lend me your ears"
+argument_list|,
+literal|1
+argument_list|)
+block|,
+operator|new
+name|Input
+argument_list|(
+literal|"as you sow so shall you reap"
+argument_list|,
+literal|1
+argument_list|)
+block|,     }
+decl_stmt|;
+name|Path
+name|tempDir
+init|=
+name|createTempDir
+argument_list|(
+literal|"BlendedInfixSuggesterTest"
+argument_list|)
+decl_stmt|;
+name|Analyzer
+name|a
+init|=
+operator|new
+name|StandardAnalyzer
+argument_list|(
+name|CharArraySet
+operator|.
+name|EMPTY_SET
+argument_list|)
+decl_stmt|;
+comment|// BlenderType.LINEAR is used by default (remove position*10%)
+name|BlendedInfixSuggester
+name|suggester
+init|=
+operator|new
+name|BlendedInfixSuggester
+argument_list|(
+name|newFSDirectory
+argument_list|(
+name|tempDir
+argument_list|)
+argument_list|,
+name|a
+argument_list|)
+decl_stmt|;
+name|suggester
+operator|.
+name|build
+argument_list|(
+operator|new
+name|InputArrayIterator
+argument_list|(
+name|keys
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|String
+name|term
+init|=
+literal|"you"
+decl_stmt|;
+name|List
+argument_list|<
+name|Lookup
+operator|.
+name|LookupResult
+argument_list|>
+name|responses
+init|=
+name|suggester
+operator|.
+name|lookup
+argument_list|(
+name|term
+argument_list|,
+literal|false
+argument_list|,
+literal|1
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|responses
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|responses
+operator|=
+name|suggester
+operator|.
+name|lookup
+argument_list|(
+name|term
+argument_list|,
+literal|false
+argument_list|,
+literal|2
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|responses
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|responses
+operator|=
+name|suggester
+operator|.
+name|lookup
+argument_list|(
+name|term
+argument_list|,
+literal|1
+argument_list|,
+literal|false
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|responses
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|responses
+operator|=
+name|suggester
+operator|.
+name|lookup
+argument_list|(
+name|term
+argument_list|,
+literal|2
+argument_list|,
+literal|false
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|responses
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|responses
+operator|=
+name|suggester
+operator|.
+name|lookup
+argument_list|(
+name|term
+argument_list|,
+operator|(
+name|Map
+operator|)
+literal|null
+argument_list|,
+literal|1
+argument_list|,
+literal|false
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|responses
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|responses
+operator|=
+name|suggester
+operator|.
+name|lookup
+argument_list|(
+name|term
+argument_list|,
+operator|(
+name|Map
+operator|)
+literal|null
+argument_list|,
+literal|2
+argument_list|,
+literal|false
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|responses
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|responses
+operator|=
+name|suggester
+operator|.
+name|lookup
+argument_list|(
+name|term
+argument_list|,
+operator|(
+name|Set
+operator|)
+literal|null
+argument_list|,
+literal|1
+argument_list|,
+literal|false
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|responses
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|responses
+operator|=
+name|suggester
+operator|.
+name|lookup
+argument_list|(
+name|term
+argument_list|,
+operator|(
+name|Set
+operator|)
+literal|null
+argument_list|,
+literal|2
+argument_list|,
+literal|false
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|responses
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|responses
+operator|=
+name|suggester
+operator|.
+name|lookup
+argument_list|(
+name|term
+argument_list|,
+literal|null
+argument_list|,
+literal|false
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|responses
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|responses
+operator|=
+name|suggester
+operator|.
+name|lookup
+argument_list|(
+name|term
+argument_list|,
+literal|null
+argument_list|,
+literal|false
+argument_list|,
+literal|2
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|responses
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|responses
+operator|=
+name|suggester
+operator|.
+name|lookup
+argument_list|(
+name|term
+argument_list|,
+operator|(
+name|BooleanQuery
+operator|)
+literal|null
+argument_list|,
+literal|1
+argument_list|,
+literal|false
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|responses
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|responses
+operator|=
+name|suggester
+operator|.
+name|lookup
+argument_list|(
+name|term
+argument_list|,
+operator|(
+name|BooleanQuery
+operator|)
+literal|null
+argument_list|,
+literal|2
+argument_list|,
+literal|false
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|responses
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|suggester
+operator|.
+name|close
+argument_list|()
 expr_stmt|;
 block|}
 DECL|method|rying
