@@ -280,6 +280,125 @@ literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_reciprocal']/ls
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testSuggestCount
+specifier|public
+name|void
+name|testSuggestCount
+parameter_list|()
+block|{
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+name|URI
+argument_list|,
+literal|"q"
+argument_list|,
+literal|"the"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_COUNT
+argument_list|,
+literal|"1"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_DICT
+argument_list|,
+literal|"blended_infix_suggest_reciprocal"
+argument_list|)
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_reciprocal']/lst[@name='the']/int[@name='numFound'][.='1']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+name|URI
+argument_list|,
+literal|"q"
+argument_list|,
+literal|"the"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_COUNT
+argument_list|,
+literal|"2"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_DICT
+argument_list|,
+literal|"blended_infix_suggest_reciprocal"
+argument_list|)
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_reciprocal']/lst[@name='the']/int[@name='numFound'][.='2']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+name|URI
+argument_list|,
+literal|"q"
+argument_list|,
+literal|"the"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_COUNT
+argument_list|,
+literal|"3"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_DICT
+argument_list|,
+literal|"blended_infix_suggest_reciprocal"
+argument_list|)
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_reciprocal']/lst[@name='the']/int[@name='numFound'][.='3']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+name|URI
+argument_list|,
+literal|"q"
+argument_list|,
+literal|"the"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_COUNT
+argument_list|,
+literal|"20"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_DICT
+argument_list|,
+literal|"blended_infix_suggest_reciprocal"
+argument_list|)
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_reciprocal']/lst[@name='the']/int[@name='numFound'][.='3']"
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
